...
    state.theme.styles = styles;
  }),
  theme: {
    primary: '#ffe45e',
    primaryDark: '#fdd835',
    textcolor: '#222',
    styles: themes['hljs']['obsidian'],
    highlighter: 'hljs',
    selectedTheme: 'tomorrow',
    pre: 'pre[class*="language-"]',
  },
  codeShortcuts: [
    {key: '	', label: 'TAB'},
...
